--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
 	"private": true,
 	"version": "0.0.0",
 	"type": "module",
+	"homepage": "https://dundiir.github.io/Countries-API/",
 	"scripts": {
 		"dev": "vite",
 		"build": "tsc -b && vite build",
